crates/gcp-orgmove-cli/tests/snapshots/golden__apply.snap
---
source: crates/gcp-orgmove-cli/tests/golden.rs
expression: "golden(&g, d, &[\"apply\", \"--yes\"]).await"
---
{
  "command": "apply",
  "data": {
    "constraints_left": [],
    "constraints_restored": true,
    "failed": [],
    "interrupted": false,
    "moved": [
      "proj-aaaa",
      "proj-bbbb"
    ],
    "restore_errors": [],
    "skipped": []
  },
  "schema_version": 1
}
