crates/gcp-orgmove-cli/tests/snapshots/golden__parity_fix_dry_run.snap
---
source: crates/gcp-orgmove-cli/tests/golden.rs
expression: "golden(&g, d, &[\"parity\", \"fix\"]).await"
---
{
  "command": "parity-fix",
  "data": {
    "dry_run": true,
    "results": [
      {
        "action": "grant roles/compute.viewer to group:eng@x.com on projects/proj-aaaa",
        "finding": "F-ade1b52c9637",
        "project": "proj-aaaa",
        "result": "WouldApply"
      },
      {
        "action": "grant roles/compute.viewer to group:eng@x.com on projects/proj-bbbb",
        "finding": "F-147385dd1430",
        "project": "proj-bbbb",
        "result": "WouldApply"
      }
    ]
  },
  "schema_version": 1
}
